--- a/LaTeX/titlepage.tex
+++ b/LaTeX/titlepage.tex
@@ -1,23 +1,13 @@
 \begin{titlepage}
 	\begin{center}
-		\vspace*{1cm}
-		{\Large \textbf{CSN造船厂}}
-		
+		\vspace{1cm}
+		{\Large \textbf{CSN造船厂}}\\
 		\vspace{1.5cm}
-		
-		{\Large \textbf{CSN F9}}
-		
+		{\Large \textbf{CSN F9}}\\
 		\vspace{1.5cm}
-		
-		{\Large \textbf{飞行机组操作手册}}
-		
+		{\Large \textbf{飞行机组操作手册}}\\
 		\vfill
-		
-		
-		
 		\vspace{1.8cm}
-		
 		\doclicenseThis
-		
 	\end{center}
 \end{titlepage}
