--- a/LaTeX/titlepage.tex
+++ b/LaTeX/titlepage.tex
@@ -1,11 +1,13 @@
 \begin{titlepage}
 	\begin{center}
 		\vspace{1cm}
-		{\Large \textbf{CSN造船厂}}\\
+		{\color{F9blue}{\LARGE \textbf{\textsf{CSN F9「碳箭」}}}}\\
 		\vspace{1.5cm}
-		{\Large \textbf{CSN F9}}\\
-		\vspace{1.5cm}
-		{\Large \textbf{飞行机组操作手册}}\\
+		{\Large \textbf{\textsf{飞行机组操作手册}}}\\
+		\vspace{2.5cm}
+		\begin{center}
+			\includegraphics[width=0.7\linewidth]{Picture/F9_titlepic}
+		\end{center}
 		\vfill
 		\vspace{1.8cm}
 		\doclicenseThis
