--- a/LaTeX/CSN_F9_FCOM.tex
+++ b/LaTeX/CSN_F9_FCOM.tex
@@ -29,7 +29,7 @@
 \setsansfont[Scale=1,BoldFont={Noto Sans},ItalicFont={Noto Sans Light Italic}]{Noto Sans Light}
 \setmonofont[Scale=1]{MapleMono-NF-CN-Light}
 
-\setCJKmainfont[AutoFakeBold=3,AutoFakeSlant=0.15,Scale=1]{ZhuqueFangsong-Regular}
+\setCJKmainfont[AutoFakeBold=1.25,AutoFakeSlant=0.15,Scale=1]{ZhuqueFangsong-Regular}
 \setCJKfallbackfamilyfont{\CJKrmdefault}[AutoFakeBold=3,AutoFakeSlant=0.2,Scale=1]{NotoSerifCJKsc-Regular}
 \setCJKsansfont[Scale=1]{SarasaGothicSC-Light.ttf}
 \setCJKmonofont[Scale=1]{MapleMono-NF-CN-Regular}
@@ -70,6 +70,7 @@
 
 %color
 \definecolor{invpurple}{HTML}{40ffbf}
+\definecolor{F9blue}{HTML}{3350b1}
 % 水
 \providecolor{水蓝}{HTML}{d2f0f4}
 % 蓝
