--- a/LaTeX/titlepage.tex
+++ b/LaTeX/titlepage.tex
@@ -1,9 +1,9 @@
 \begin{titlepage}
 	\begin{center}
 		\vspace{1cm}
-		{\color{F9blue}{\LARGE \textbf{\textsf{CSN F9「碳箭」}}}}\\
+		{\color{F9blue}{\Huge \textbf{{ CSN F9「碳箭」}}}}\\
 		\vspace{1.5cm}
-		{\Large \textbf{\textsf{飞行机组操作手册}}}\\
+		{\Large \textbf{{飞行机组操作手册}}}\\
 		\vspace{2.5cm}
 		\begin{center}
 			\includegraphics[width=0.7\linewidth]{Picture/F9_titlepic}
